--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Mini Project</h1>
         <p>Alarm | piano| stopwatch</p>
       </div>
-      <div class="container"><a href="./Alarm/index.html" class="link">
+      <div class="container"><a href="./alarm/index.html" class="link">
         <img src="a.jpg" alt="Snow" >
         </a>
       </div>
